# GroceryJetpackCompose

./: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  google-services.json
app/schemas/com.grocery.groceryapp.RoomDatabase.AppDatabase/: 1.json  2.json  3.json  4.json
app/schemas/com.grocery.mandixpress.RoomDatabase.AppDatabase/: 4.json  5.json
app/src/: google-services.json
app/src/androidTest/java/com/grocery/groceryapp/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/grocery/mandixpress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Countries.json
app/src/main/java/com/grocery/groceryapp/: HiltApplication.kt  LoginActivity.kt  MainActivity.kt
app/src/main/java/com/grocery/mandixpress/: HiltApplication.kt  LoginActivity.kt
app/src/main/jni/: keys.c
app/src/main/res/anim/: fade_out.xml  feed_reply_scale_down.xml  feed_reply_scale_normal.xml  hide_view.xml  scale_camera_progress.xml  scale_down_camera_progress.xml  show_view.xml  zoom_in_out.xml
app/src/main/res/drawable/: bolt.xml  cart_icon.xml  cart_symbol.xml  close_button.xml  filter.xml  heart_icon.xml  home_icon.xml  homeicon.xml  ic_arow_back.xml  ic_arow_next.xml  ic_baseline_arrow_drop_down_24.xml  ic_baseline_wifi_off_24.xml  ic_favorite.xml  ic_marker.xml  ic_promocode.xml  ic_shop.xml  location_pin.xml  log_out.xml  minus.xml  plus_icon.xml  profile_icon.xml  right_arrow.xml  tick_icon.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/grocery/groceryapp/: ExampleUnitTest.kt
(+324 files in other folders)
